--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,15 @@ label {
   margin-bottom: 5px;
 }
 
+input + label {
+  font-weight: bold;
+  display: inline-flex;
+  margin-right: 20px;
+}
+
 input[type='text'],
 input[type='email'],
+input[type='password'],
 textarea,
 select {
   display: block;
